ft - Fix low color contrast of links on buttons

--- a/css/style.scss
+++ b/css/style.scss
@@ -101,9 +101,8 @@ main a {
     text-decoration: none;
     padding: 2px 1px 0;
 
-  
     &:link {
-    color: $highlight_color;
+    color: $sec_color
   }
   
     &:visited {
@@ -124,6 +123,10 @@ main a {
     background: $main_color;
     color: $highlight_color;
   }
+
+    &.btn {
+        color: black;
+    }
 }
 
 .image-float-left {
